fixed BSLG text size/wrap

--- a/style.less
+++ b/style.less
@@ -654,8 +654,9 @@ px      68    160    252    344    436    528    620    712    */
 	#pt3 h4 { margin-top: 22px; }
 	#pt4 h4 { margin-top: 32px; }
 	
-	.bslg-break { display: inline; }
-	.bslg-nobreak { display: none; }
+	.bslg-break { display: none; }
+	.bslg-nobreak { display: inline; }
+	#bslg { font-size: 2.09*@txt;}
 	
 }
 
@@ -781,6 +782,7 @@ px      68    160    252    */
 	
 	.bslg-break { display: inline; }
 	.bslg-nobreak { display: none; }
+	#bslg { .big }
 }
 
 
@@ -917,7 +919,8 @@ px      68    160    252    344    436    */
 	#pt3 h4 { margin-top: 8px; }
 	#pt4 h4 { margin-top: 18px; }
 	
-	.bslg-break { display: inline; }
-	.bslg-nobreak { display: none; }
+	.bslg-break { display: none; }
+	.bslg-nobreak { display: inline; }
+	#bslg { font-size: 1.28*@txt; }
 	
 }
